--- a/.github/workflows/java-springboot-ci.yml
+++ b/.github/workflows/java-springboot-ci.yml
@@ -2,39 +2,43 @@ name: Java Spring Boot CI
 
 on:
   workflow_call:
+    inputs:
+      java-version:
+        required: true
+        type: string
+      docker-image-name:
+        required: true
+        type: string
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        java-version: [11]
-
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up JDK ${{ matrix.java-version }}
+      - name: Set up JDK ${{ inputs.java-version }}
         uses: actions/setup-java@v3
         with:
-          java-version: ${{ matrix.java-version }}
+          java-version: ${{ inputs.java-version }}
+          distribution: 'adopt'
+          server-id: github
+          server-username: ${{ github.actor }}
+          server-password: ${{ secrets.TOKEN_GITHUB }}
+          overwrite-settings: true
 
       - name: Build with Maven
-        run: mvn clean package
-
-      - name: Run tests
-        run: mvn test
-
-      - name: Build Docker image
-        run: docker build -t Product-app:latest .
+        run: mvn clean install -DskipTests
 
       - name: Log in to Docker Hub
-        env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        run: echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
 
-      - name: Push Docker image
-        run: |
-          docker tag Product-app:latest my-docker-repo/Product-app:latest
-          docker push my-docker-repo/my-springboot-app:latest
+      - name: Build & Push Docker image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: ${{ inputs.docker-image-name }}:latest
