--- a/.github/workflows/java-springboot-ci.yml
+++ b/.github/workflows/java-springboot-ci.yml
@@ -35,8 +35,11 @@ jobs:
           password: ${{ secrets.DOCKER_TOKEN }}
 
       - name: Build & Push Docker image
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          push: true
-          tags: surajc7723/${{ github.repository }}:latest
+        env:
+          REPOSITORY_NAME: ${{ github.repository }}
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+        run: |
+          REPO_NAME=$(echo "${REPOSITORY_NAME#*/}" | tr '[:upper:]' '[:lower:]')
+          docker build -t surajc7723/$REPO_NAME:latest .
+          docker push surajc7723/$REPO_NAME:latest
+
